# biozim

./: Makefile  acinclude.m4  biozim-gfx.R  configure.ac  environment.cpp  environment.h  libbiozim.pc.in  noise.R  sbml2ode.cpp  sbmlode-batch-gen.R  sbmlode-batch.sh  simulation.cpp  simulation.h  thattai.R
data/: BIOMD0000000010.xml  flagella.xml  zak-l2.xml  zak.xml
data/basic/: basic-model1-bothboundary-l2.xml  basic-model1-boundary-l2.xml  basic-model1-boundary2-l2.xml  basic-model1-forward-from-zero-l2.xml  basic-model1-forward.xml  basic-model1-noeffect-l2.xml  basic-model1-stoichiometryIs2-l2.xml
data/complex/: Hill_L2.xml
data/stochastic/dsmts/: README.txt  model-list
data/stochastic/noise/: ffl.xml  singlegene.xml
ode/: ODESettings.cpp  ODESettings.h
sbml/: SBMLParser.cpp  SBMLParser.h  TimeCourse.cpp  TimeCourse.h  TimeCourseResults.cpp  TimeCourseResults.h
src/: Makefile.am  biozim.cpp  environment.cpp  environment.h  gnuplot_i.c  gnuplot_i.h  simulation.cpp  simulation.h
src/.deps/: ODESettings.Po  SBMLParser.Po  biozim.Po  environment.Po  gnuplot_i.Po  simulation.Po
src/sbml/: SBMLParser.cpp  SBMLParser.h
